--- a/site/index.html
+++ b/site/index.html
@@ -21,7 +21,6 @@
 <script src="katex/katex.min.js"></script>
 <script src="temml/temml.min.js"></script>
 <script src="katex/mhchem.min.js" defer></script>
-<script src="marked.js" defer></script>
 <script src="chart.min.js" async></script>
 <script src="hurmet.min.js"></script>
 </head>
@@ -60,6 +59,14 @@
 <div style="display: none" id="content">
 
 <p>This is editable text. You can focus it and start typing. A calculation cell will open if you click on it. All calculations will update if you press <strong>Enter</strong> to close a calculation cell.</p>
+
+<h3>News</h3>
+
+<p>Hurmet’s version of Markdown has been extended. It now conveys all Hurmet features.</p>
+
+<p>Hurmet no longer has hidden paragraphs or folded paragraphs. I want to avoid needless complexity.</p>
+
+<p></p>
 
 <p>This week’s example:</p>
 
