--- a/preview/index.html
+++ b/preview/index.html
@@ -21,7 +21,6 @@
 <script src="../site/katex/katex.min.js"></script>
 <script src="../site/temml/temml.min.js"></script>
 <script src="../site/katex/mhchem.min.js"></script>
-<script src="../site/marked.js"></script>
 <script src="../site/chart.min.js"></script>
 <script src="hurmet.js"></script>
 </head>
@@ -57,21 +56,42 @@
 </div>
 
 <div id=editor style="margin-bottom: 23px"></div>
-<div style="display: none" id="content"><p>This is editable text. You can focus it and start typing. All calculations will update if you press <strong>Shift-Enter</strong> to close a calculation cell.</p>
+<div style="display: none" id="content">
 
-<p>This week’s example:</p>
-
-<h3>Simple span beam</h3>
-
-<p><span class="hurmet-calc" data-entry="L = '12 feet'"></span>, length</p>
-
-<p><span class="hurmet-calc" data-entry="w = '110 lbf/ft'"></span>, uniform line load</p>
-
-<p><span class="hurmet-calc" data-entry="P = '1000 lbf'"></span>, mid-span point load</p>
-
-<p><span class="hurmet-calc" data-entry="V = (w L)/2 + P/2 = ?? lbf"></span>, maximum shear</p>
-
-<p><span class="hurmet-calc" data-entry="M = (w L^2)/8 + (P L)/4 = ?? lbf-ft"></span>, max bending moment</p>
+   <p>This is editable text. You can focus it and start typing. All calculations will update if you press <strong>Enter</strong> to close a calculation cell.</p>
+   <p></p>
+   <p><span class="hurmet-calc" data-entry="EC = {
+      &quot;D&quot; if 100 ≤ 50000000000000000000000000000000000000000000000000000000;
+      &quot;C&quot; otherwise
+      } = %"></span></p>
+   <blockquote>
+      <ul>
+         <li>
+            <p>Item In a block quote. This is editable text. You can focus it and start typing. All calculations will update if you press <strong>Enter</strong> to close a calculation cell.</p>
+            <p>2nd graf. This is editable text. You can focus it and start typing. All calculations will update if you press <strong>Enter</strong> to close a calculation cell.</p>
+         </li>
+         <li>
+            <p>3rd item.</p>
+         </li>
+      </ul>
+   </blockquote>
+   <ol>
+      <li>
+         <p>Item one</p>
+         <p>A second graph. This is editable text. You can focus it and start typing. All calculations will update if you press <strong>Enter</strong> to close a calculation cell.</p>
+         <p class="indented">An indented graph. This is editable text. You can focus it and start typing. All calculations will update if you press <strong>Enter</strong> to close a calculation cell.</p>
+      </li>
+      <li>
+         <p>Item two.</p>
+      </li>
+   </ol>
+   <p>This week’s example:</p>
+   <h3>Simple span beam</h3>
+   <p><span class="hurmet-calc" data-entry="L = '12 feet'"></span>, length</p>
+   <p><span class="hurmet-calc" data-entry="w = '110 lbf/ft'"></span>, uniform line load</p>
+   <p><span class="hurmet-calc" data-entry="P = '1000 lbf'"></span>, mid-span point load</p>
+   <p><span class="hurmet-calc" data-entry="V = (w L)/2 + P/2 = ?? lbf"></span>, maximum shear</p>
+   <p><span class="hurmet-calc" data-entry="M = (w L^2)/8 + (P L)/4 = ?? lbf-ft"></span>, max bending moment</p>
 
 </div> <!-- editor -->
 
