Edit the SDOF seismic example.

--- a/site/index.html
+++ b/site/index.html
@@ -102,7 +102,7 @@
 </div>
 <p>A structure’s natural period is an important part of seismic (earthquake) analysis. Seismic vibration will produce higher forces in structures whose natural period is close to the average period of the seismic motion. </p>
 <p>Seismic motion usually has a pretty high frequency. The cycles come pretty quickly. That has its highest effects on structures with short natural periods. From the equations above, you can work out that short structures tend to have short natural periods and tall structures tend to have long natural periods.</p>
-<p>That explains why high-rise buildings are feasible in high-seismic areas. Their long natural period of vibration does not match well to the earthquake and they get the lower forces that come from a lack of resonance.</p>
+<p>That explains why high-rise buildings are feasible. Their long natural period of vibration does not match well to the earthquake and they get the lower forces that come from a lack of resonance.</p>
 <p>Places like Mexico City, built on the deep soft soil of an old lake bed, have earthquakes with somewhat longer cycle times. A place like that is tough on mid-rise buildings.</p>
 <p>Next week, we’ll look at a two story structure and find the first two natural periods.</p>
 
