--- a/site/index.html
+++ b/site/index.html
@@ -101,7 +101,9 @@
    <p><span class="hurmet-calc" data-entry="f_D = 1/T_D = (ω √(1 - ξ²))/(2 π)"></span></p>
 </div>
 <p>A structure’s natural period is an important part of seismic (earthquake) analysis. Seismic vibration will produce higher forces in structures whose natural period is close to the average period of the seismic motion. </p>
-<p>Seismic motion usually has a pretty high frequency. The cycles come pretty quickly. That has its highest effects on structures with short natural periods. From the equations above, you can work out that short structures tend to have short natural periods and tall structures tend to have long natural periods.</p>
+<p>Seismic motion usually has a pretty high frequency. The cycles come pretty quickly. That has its highest effects on structures with short natural periods. When the natural period matches the forcing motion, you get resonance, that is, each cycle reinforces the motions of the structure. Like you when you push your kid on a swing.</p>
+<p>If the natural period is not close to the forcing motion, then some of the cycles act in a direction opposite to the structure’s motion. Those cycles retard, not reinforce, the motion of the structure.</p>
+<p>From the equations above, you can work out that short structures tend to have short natural periods and tall structures tend to have long natural periods.</p>
 <p>That explains why high-rise buildings are feasible. Their long natural period of vibration does not match well to the earthquake and they get the lower forces that come from a lack of resonance.</p>
 <p>Places like Mexico City, built on the deep soft soil of an old lake bed, have earthquakes with somewhat longer cycle times. A place like that is tough on mid-rise buildings.</p>
 <p>Next week, we’ll look at a two story structure and find the first two natural periods.</p>
