Edit SDOF example.

--- a/site/index.html
+++ b/site/index.html
@@ -87,7 +87,7 @@
 </div>
 <p>We’ll assume for a moment that the structure has no damping. Then the natural circular frequency is:</p>
 <div class="indented">
-   <p><span class="hurmet-calc" data-entry="ω = √(k/m)"></span>, in radians per second</p>
+   <p><span class="hurmet-calc" data-entry="ω = √(k/m)"></span>, in radians per second, where<br><span class="hurmet-calc" data-entry="k"></span> is the stiffness defined above and<br><span class="hurmet-calc" data-entry="m"></span> is the mass of the structure.</p>
 </div>
 <p>And the natural period and the cyclic frequency are:</p>
 <div class="indented">
