--- a/site/index.html
+++ b/site/index.html
@@ -62,29 +62,44 @@
 
 <p>This week’s example:</p>
 
-<h3>Tank Contents<img src="data:image/svg+xml;utf8,%3Csvg version='1.0' width='1735.105' height='681.314' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M1065.105.385c-410.667-.667-205.333-.333 0 0zm-502.4 25.1c-6.1 2.3-11.2 7-13.8 12.9-3 6.7-3 22.9 0 28.6 2.7 5.3 7 9.6 11.9 12 5.3 2.6 19.3 2.6 24.3 0 9.5-5 15.5-15.4 9.8-17-4.4-1.1-5.8-.6-8.3 3.4-1.4 2.3-4 5-5.8 6-9.1 5.6-22.8-1.4-23.9-12.1l-.3-3.4 21-.5 21-.5-.2-4.7c-.6-19.7-17.7-31.6-35.7-24.7zm16.8 7.3c4.1 1.7 7.8 6.7 8 10.9l.1 3.2-15.2.3-15.3.3v-2.8c0-3.3 3.2-8.1 7.4-11.1 3.6-2.6 9.9-2.9 15-.8zm471.1-2.2c-.3.7-.4 18.6-.3 39.8l.3 38.5 24.3.3 24.3.2-.3-4.2-.3-4.3-18.7-.3-18.8-.2-.2-35.3-.3-35.2-4.8-.3c-3.2-.2-4.9.1-5.2 1zm-540 232.5c-.3 81.3-.6 159-.8 172.8-.3 31.1 2 56.7 7.2 81 .6 2.7 1.4 6.3 1.7 8 2.5 12.3 12.1 43.1 16.5 53.4 13.1 29.9 26.2 50.3 43.4 67.6 14.7 14.8 31.8 25 49 29.1 7.8 1.9 17.7 1.9 410 1.9 346.2 0 402.8-.2 408-1.4 5-1.2 23.3-1.5 105.8-1.8 98.8-.3 99.7-.3 99.7-2.3 0-2.3 13-2.1-109.7-2-49.1 0-73.3-.3-73.3-1 0-.5.4-1 .9-1 2.6 0 20.4-13.4 28.5-21.4 22.6-22.5 39-51.4 51.5-90.6 8.7-27.2 13.6-51.6 16.4-81 2.1-22.7 1.4-70.1-1.3-88.5-.5-3.3-1.4-9.6-2-14-.6-4.4-1.5-9.8-2-12-.5-2.2-1.4-6.7-2.1-10-3.2-15.9-9.9-38.3-15.9-53.4-14.2-36.2-35.3-66.3-58.5-83.9-8.7-6.6-23.1-13.7-33.2-16.5l-7.8-2.2-400.5-.3c-307.4-.2-402.1 0-407.5.9-8.2 1.4-19.9 5-25.8 8.1-9.8 4.9-22 14.2-31.5 24-9.9 10.1-11.5 12-18.5 22.3-6.7 9.9-19.9 34.7-23.3 43.7-8.3 22.1-18.4 56.7-18.4 62.7 0 1.2-.4 2.1-1 2.1-1.3 0-1.4-213.6-.1-214.4.4-.3 9.7 3.9 20.7 9.4 10.9 5.5 20.4 10 21.1 10 .9 0 1.3-2.8 1.5-10.3l.3-10.2 16.8-.3 16.7-.2v10.3c0 5.7.3 10.6.6 11 .8.8 46.4-22 46.4-23.3 0-1.3-45.6-24.1-46.4-23.3-.3.4-.6 5.3-.6 11v10.3l-16.7-.2-16.8-.3-.3-10.3c-.1-5.7-.7-10.2-1.2-10.2-.6 0-10 4.5-21 10s-20.4 10-21 10c-.6 0-1-4.1-1-10.5 0-9.8-.1-10.5-2-10.5s-2 1.5-2.5 147.7zm130.5-43.7.5 15.5h9l.3-15.8.3-15.7h773.8l.3 15.7.3 15.8h9l.5-15.5.5-15.5 3 .3c26.9 2.8 54.5 24.2 75.8 58.7 14.6 23.7 27.2 56.6 33.6 88 .7 3.3 1.6 7.8 2.1 10 2 9.5 4.5 28.5 6.1 47 1.7 19.5-.1 73.6-2.6 79.7-.7 1.7-4.5 1.8-59.6 1.8h-58.9v-36h-10v36h-774v-36h-10v36h-58.9c-38.9 0-59.2-.3-59.6-1-1.5-2.4-3-29.3-3-52.5.1-33.3 1.8-51.3 8-82.3 3.2-16 9.1-36.5 14.5-50.2 1.2-3 2.8-7.2 3.6-9.3 1.5-4.1 11.2-23 14.6-28.7 19-31.3 42.7-52.3 66.3-58.9 9.2-2.5 11.1-2.9 12.5-2.8 1.2.2 1.6 2.9 2 15.7zm910.2 284c-1.2 13.9-9.4 44.1-18.6 68.8-2.4 6.4-16.1 33-20.4 39.4-6.3 9.6-7.4 11.1-14.9 19.9-13.2 15.4-31.7 28.7-44.7 32-12.2 3.1-15.9 3.8-16.7 3.3-.5-.3-.9-5.7-.9-12v-11.4h-10v24h-774v-24h-9.9l-.3 11.7-.3 11.8-3-.3c-20.7-2.2-42.7-15.7-61.2-37.7-17.1-20.2-34.4-55-42.9-86.1-3.5-13-3.8-14.2-6.7-28.4-2.4-11.7-2.6-13.7-2-14.4.4-.3 231.5-.5 513.7-.4l513.1.3z'/%3E%3Cpath d='M641.605 262.585c-.3.8-.4 9-.3 18.3l.3 17h9v-36l-4.3-.3c-2.8-.2-4.4.1-4.7 1zm784 0c-.3.8-.4 9-.3 18.3l.3 17h9v-36l-4.3-.3c-2.8-.2-4.4.1-4.7 1zm-784.5 80.8v18h10v-36h-10zm784 0v18h10v-36h-10zm-784 64v18h10v-36h-10zm784 0v18h10v-36h-10zm-616.6 97.4c-.3.8-.4 2.9-.2 4.8l.3 3.3h131v-9l-65.3-.3c-55.4-.2-65.3 0-65.8 1.2zm-166.9 12.8c-.3.8-.4 8.8-.3 17.8l.3 16.5h9v-35l-4.3-.3c-2.8-.2-4.4.1-4.7 1zm784 0c-.3.8-.4 8.8-.3 17.8l.3 16.5h9v-35l-4.3-.3c-2.8-.2-4.4.1-4.7 1zm-595.1 5.2c-.3.8-.4 2.9-.2 4.8l.3 3.3 45.3.3 45.2.2v-10h-45c-37.8 0-45.1.2-45.6 1.4zm14 16c-.3.8-.4 2.9-.2 4.8l.3 3.3h62v-9l-30.8-.3c-25.8-.2-30.8 0-31.3 1.2zm-202.9 41.8c-.3.8-.4 9-.3 18.3l.3 17h9v-36l-4.3-.3c-2.8-.2-4.4.1-4.7 1zm784 0c-.3.8-.4 9-.3 18.3l.3 17h9v-36l-4.3-.3c-2.8-.2-4.4.1-4.7 1zm-782.3-436c.3 25.3.5 29.3 1.8 29.3s1.5-2.6 1.8-16.3c.1-8.9.6-16.2 1-16.2s10.1 4.7 21.7 10.5c11.5 5.8 21.5 10.5 22.2 10.5.9 0 1.3-2.9 1.5-10.3l.3-10.2 343.8-.3 343.7-.2v10.3c0 5.7.3 10.6.6 11 .4.3 10.5-4.3 22.5-10.4 12-6 22.1-10.9 22.4-10.9.3 0 .5 7.2.5 16 0 15.3.1 16 2 16 2 0 2-.7 2-29s0-29-2-29c-1.9 0-2 .7-2 11 0 6-.2 11-.5 11s-10.4-4.9-22.4-10.9c-12-6.1-22.1-10.7-22.5-10.4-.3.4-.6 5.3-.6 11v10.3l-343.7-.2-343.8-.3-.3-10.3c-.1-5.7-.7-10.2-1.2-10.2-.6 0-10.5 4.7-22 10.5s-21.4 10.5-22 10.5c-.6 0-1-4.3-1-11 0-10.4-.1-11-2-11-2 0-2 .5-1.8 29.2zm943.8 348.8c0 1.9.6 2 10.9 2 6.1 0 11.2.4 11.5.9.3.4-3.9 9.7-9.4 20.7-5.5 10.9-10 20.4-10 21.1 0 .9 2.8 1.3 10.3 1.5l10.2.3v81l-10.2.3c-5.8.1-10.3.7-10.3 1.2 0 1.8 22 45 22.9 45 .8 0 23.1-43.6 23.1-45.2 0-.4-4.6-.9-10.2-1l-10.3-.3v-81l10.3-.3c5.7-.1 10.2-.7 10.2-1.2 0-.6-4.5-10-10-21s-10-20.4-10-21c0-.6 7.1-1.1 18.3-1.2 15.4-.3 18.2-.5 18.2-1.8s-4.4-1.5-32.7-1.8c-32.3-.2-32.8-.2-32.8 1.8zm102 96v40h10v-40l3.5-3.8c4.5-5 10.1-6.9 15.4-5.4 7 2.2 7.5 3.9 8.1 27.7l.5 21 4.3.3 4.2.3v-23.4c0-22.6-.1-23.5-2.2-26.7-3.1-4.5-9.9-8-15.7-8-5.3 0-11.2 1.9-13.9 4.3-3.8 3.5-4.2 2.4-4.2-12.3v-14h-10z'/%3E%3Cellipse style='fill:%23fff;stroke:%23000;stroke-width:8;stroke-miterlimit:4;stroke-dasharray:none' cx='231.688' cy='439.354' rx='227.688' ry='237.96'/%3E%3Cpath style='fill:none;stroke:%23000;stroke-width:6;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1' d='m455.158 492.07-444.263 2.42'/%3E%3C/svg%3E" alt="Horizontal Tank" width="300" class="right"></h3>
-<p>A horizontal tank is partially full. What is the volume of the contents?</p>
-<p>First, find the volume of the tank’s cylindrical section.</p>
+<h3>Lanczos Formula</h3>
+<p>The Gamma function, <span class="hurmet-calc" data-entry="Γ(x)"></span>, extends factorials. For positive integers,</p>
 <div class="indented">
-   <p><span class="hurmet-calc" data-entry="V_cyl = L ( R² acos(1 - h//R) - (R-h) √(h (D - h)))"></span></p>
+   <p><span class="hurmet-calc" data-entry="Γ(n) = (n-1)!"></span></p>
 </div>
-<p>Atmospheric tanks generally have flat ends. Let’s do a more challenging pressure vessel, which typically has forged elliptical heads at each end.</p>
+<p>… and the Gamma function is further extended to all complex numbers,</p>
 <div class="indented">
-   <p><span class="hurmet-calc" data-entry="V_heads = π h² e (1 - h/(3R))"></span></p>
+   <p><span class="hurmet-calc" data-entry="\displaystyle Γ(z) = ∫_0^∞ x^(z-1) e^(-x) &quot; d&quot;x"></span> </p>
 </div>
-<p>Total volume</p>
+<p>Hurmet’s implementation of the Gamma function uses a version of the Lanczos approximation written by Glendon Pugh. On pages 116 and 117 of [1], he writes:</p>
 <div class="indented">
-   <p><span class="hurmet-calc" data-entry="V = L ( R² acos(1 - h//R) - (R-h) √(h (D - h))) + π h² e (1 - h/(3R))"></span></p>
+   <p><span class="hurmet-calc" data-entry="\displaystyle Γ(z + 1) ≅ 2 √(e/π) ((z + 10.900511 + 1∕2) / e)^(z + 1∕2) (d_1 + \sum_(k=2)¹¹ (d_k/(z + k - 1)))"></span>, where the coefficients, <span class="hurmet-calc" data-entry="d_k"></span> are:</p>
+   <p><span class="hurmet-calc" data-entry="d = \[2.48574089138753565546e-5; 1.05142378581721974210;
+      -3.45687097222016235469; 4.51227709466894823700; -2.98285225323576655721;
+      1.05639711577126713077; -0.195428773191645869583; 0.0170970543404441224307;
+      -0.000571926117404305781283; 0.00000463399473359905636708;
+      -0.00000000271994908488607703910]"></span></p>
 </div>
-<p>Let’s do the numbers for an example vessel.</p>
+<p>So Hurmet’s internal code works like this:</p>
+<p>
+   <span class="hurmet-calc" data-entry="function lanczos(input, d)
+      x = input - 1
+      term1 = 2 × √(e¹/π)
+      term2 = ((x + 10.900511 + 0.5) / e¹)^(x + 0.5) 
+      sum = d[1]
+      for k in 2:11
+          sum = sum + d[k] / (x + k - 1)
+      return term1 × term2 × sum">
+</span></p>
+<p>Let’s see if I typed in that function correctly:</p>
 <div class="indented">
-<p><span class="hurmet-calc" data-entry="L = '12 feet'"></span>, tangent-to-tangent length</p>
-<p><span class="hurmet-calc" data-entry="D = '7.5 feet'"></span>, inside diameter</p>
-<p><span class="hurmet-calc" data-entry="R = D/2 = ?? feet"></span>, radius</p>
-<p><span class="hurmet-calc" data-entry="e = 1//4 D = ?? feet"></span>. That’s a 2:1 elliptical head, which is pretty common.</p>
-<p><span class="hurmet-calc" data-entry="h = '2.75 feet'"></span>, depth of liquid</p>
-<p><span class="hurmet-calc" data-entry="format = &quot;r4&quot;"></span>, round the result to 4 significant figures</p>
-<p><span class="hurmet-calc" data-entry="V = L × ( R² acos(1 - h//R) - (R-h) √(h (D - h))) + π h² e (1 - h/(3R)) = ?? ft³"></span>, volume of contents</p>
+   <p><span class="hurmet-calc" data-entry="Γ(4.5) = ?"></span></p>
+</div>
+<div class="indented">
+   <p><span class="hurmet-calc" data-entry="lanczos(4.5, d) = %"></span>, That checks. <span class="hurmet-calc" data-entry="✓"></span></p>
+</div>
+<p>Reference:</p>
+<p>[1]: Glendon Pugh: An Analysis of the Lanczos Gamma Approximation<br>       http://bh0.physics.ubc.ca/People/matt/Doc/ThesesOthers/Phd/pugh.pdf</p>
 
 </div> <!-- editor -->
 
