--- a/site/index.html
+++ b/site/index.html
@@ -62,44 +62,26 @@
 
 <p>This week’s example:</p>
 
-<h3>Lanczos Formula</h3>
-<p>The Gamma function, <span class="hurmet-calc" data-entry="Γ(x)"></span>, extends factorials. For positive integers,</p>
+<h3>Portal Frame<img src="data:image/svg+xml;utf8,%3Csvg width='146.802' height='311.912' viewBox='0 0 38.841 82.527' xmlns='http://www.w3.org/2000/svg'%3E%3Cdefs%3E%3CclipPath id='a'%3E%3Cpath d='M1049 510h154v319h-154z'/%3E%3C/clipPath%3E%3C/defs%3E%3Cg clip-path='url(%23a)' transform='matrix(.26458 0 0 .26458 -279.4 -136.79)'%3E%3Cpath fill='%23fff' d='M1064 517h20v24h-20z'/%3E%3Ctext font-family='Arial, Arial_MSFontService, sans-serif' font-weight='400' font-size='24' transform='translate(1063.73 540)'%3EP%3C/text%3E%3Cpath d='M1082.667 545H1056v2h26.667Zm-2.667 9 16-8-16-8Z'/%3E%3Cpath d='M1108 546v84M1108 546h84M1192 546v84M1107.46 630l-6.46 11.912h12.92zM1191.96 630l-6.96 11.912h13.91z' stroke='%23000' stroke-width='2' stroke-linejoin='round' stroke-miterlimit='10' fill='none'/%3E%3Cpath d='m1108.5 630.5-12-84M1192.5 630.5l-12-84' stroke='%23000' stroke-width='.667' stroke-linejoin='round' stroke-miterlimit='10' fill='none'/%3E%3Cpath d='m1108.46 815-6.46 11.912h12.92zM1109 731v84M1109 731h84M1193 731v84M1191.96 816l-6.96 11.912h13.91z' stroke='%23000' stroke-width='2' stroke-linejoin='round' stroke-miterlimit='10' fill='none'/%3E%3Cpath d='m1108.5 534.5 84 24M1108.5 534.5v12M1096.5 546.5h12M1117.5 731.991l1.68.682 1.68.596 1.68.528 1.68.443 1.68.374 1.68.29 1.68.238 1.68.171 1.68.119 1.68.051h1.68l1.67-.051 1.68-.085 1.68-.136 1.68-.171 1.68-.204 1.68-.239 1.68-.255 1.68-.29 1.68-.323 1.68-.324 1.68-.34 1.68-.358 1.68-.358 1.68-.358 1.68-.357 1.68-.358 1.68-.358 1.68-.34 1.68-.324 1.68-.323 1.68-.29 1.68-.255 1.68-.239 1.68-.204 1.67-.171 1.68-.136 1.68-.085 1.68-.051h1.68l1.68.051 1.68.119 1.68.171 1.68.238 1.68.29 1.68.374 1.68.443 1.68.528 1.68.596 1.68.681M1109.5 815.5c.65-22.32 1.43-44.507 3-58.407 1.57-13.901 3.78-19.247 6-24.593M1192.5 814.5c.72-22.052 1.59-43.971 3.33-57.704 1.74-13.732 4.21-19.014 6.67-24.296' stroke='%23000' stroke-width='.667' stroke-linejoin='round' stroke-miterlimit='10' fill='none'/%3E%3Cpath d='M1116 648h-21l4.58 7' stroke='%23000' stroke-width='2' stroke-linejoin='round' stroke-miterlimit='10' fill='none'/%3E%3Cpath d='m1105 663 3.5 6 3.5-6Z' stroke='%23000' stroke-width='2' stroke-miterlimit='8' fill-rule='evenodd'/%3E%3Cpath d='M1108 667.985V653' stroke='%23000' stroke-width='2' stroke-linejoin='round' stroke-miterlimit='10' fill='none'/%3E%3Cpath fill='%23fff' d='M1075 638h15v23h-15z'/%3E%3Ctext font-family='Arial, Arial_MSFontService, sans-serif' font-weight='400' font-size='21' transform='translate(1074.93 658)'%3EH%3C/text%3E%3Cpath fill='%23fff' d='M1101 671h15v23h-15z'/%3E%3Ctext font-family='Arial, Arial_MSFontService, sans-serif' font-weight='400' font-size='21' transform='translate(1100.93 691)'%3EV%3C/text%3E%3Cpath d='M1202 649h-21l4.58 6' stroke='%23000' stroke-width='2' stroke-linejoin='round' stroke-miterlimit='10' fill='none'/%3E%3Cpath d='m1189 661 3.5-6 3.5 6z' stroke='%23000' stroke-width='2' stroke-miterlimit='8' fill-rule='evenodd'/%3E%3Cpath d='M1192 656v14.985' stroke='%23000' stroke-width='2' stroke-linejoin='round' stroke-miterlimit='10' fill='none'/%3E%3C/g%3E%3C/svg%3E" alt="Portal Frame" class="right" width="150"></h3>
+<p>The nearby sketch shows a portal frame with a single lateral point load. With only that information, one can draw the general shape of the reactions, the shear diagram, the moment diagram, and the deflection diagram. </p>
+<p>To get numerical detail, engineers these days are likely to use a frame analysis program, but a simple hand analysis will also do the job.</p>
+<p>Frame properties</p>
 <div class="indented">
-   <p><span class="hurmet-calc" data-entry="Γ(n) = (n-1)!"></span></p>
+   <p><span class="hurmet-calc" data-entry="h = '12 feet'"></span>, height</p>
+   <p><span class="hurmet-calc" data-entry="L = '11 feet'"></span>, beam length</p>
+   <p><span class="hurmet-calc" data-entry="E = '29000 ksi'"></span>, steel modulus of elasticity</p>
+   <p><span class="hurmet-calc" data-entry="I_col = '110 in⁴'"></span>, moment of inertia for the W8x31 columns</p>
+   <p><span class="hurmet-calc" data-entry="I_beam = '61.9 in⁴'"></span>, moment of inertia for the W8x18 beam</p>
+   <p><span class="hurmet-calc" data-entry="P = '1.6 kips'"></span>, lateral point load</p>
 </div>
-<p>… and the Gamma function is further extended to all complex numbers,</p>
+<p>Analysis</p>
 <div class="indented">
-   <p><span class="hurmet-calc" data-entry="\displaystyle Γ(z) = ∫_0^∞ x^(z-1) e^(-x) &quot; d&quot;x"></span> </p>
+   <p><span class="hurmet-calc" data-entry="format = &quot;h3&quot;"></span>, round result fractions to 3 significant digits</p>
+   <p><span class="hurmet-calc" data-entry="H = 1//2 P = ?? kips"></span>, each horizontal reaction. (Also the shear in each column.)</p>
+   <p><span class="hurmet-calc" data-entry="V = (P h) / L = ?? kips"></span>, vertical reaction. (Also ± the axial force in each column.)</p>
+   <p><span class="hurmet-calc" data-entry="M_max = (P h) / 2 = ?? kip-ft"></span>, maximum bending moment</p>
+   <p><span class="hurmet-calc" data-entry="Δ = ((P h²) / (6 E)) (h/I_col + L/(2 I_beam)) = ?? in"></span>, deflection</p>
 </div>
-<p>Hurmet’s implementation of the Gamma function uses a version of the Lanczos approximation written by Glendon Pugh. On pages 116 and 117 of [1], he writes:</p>
-<div class="indented">
-   <p><span class="hurmet-calc" data-entry="\displaystyle Γ(z + 1) ≅ 2 √(e/π) ((z + 10.900511 + 1∕2) / e)^(z + 1∕2) (d_1 + \sum_(k=2)¹¹ (d_k/(z + k - 1)))"></span>, where the coefficients, <span class="hurmet-calc" data-entry="d_k"></span> are:</p>
-   <p><span class="hurmet-calc" data-entry="d = \[2.48574089138753565546e-5; 1.05142378581721974210;
-      -3.45687097222016235469; 4.51227709466894823700; -2.98285225323576655721;
-      1.05639711577126713077; -0.195428773191645869583; 0.0170970543404441224307;
-      -0.000571926117404305781283; 0.00000463399473359905636708;
-      -0.00000000271994908488607703910]"></span></p>
-</div>
-<p>So Hurmet’s internal code works like this:</p>
-<p>
-   <span class="hurmet-calc" data-entry="function lanczos(input, d)
-      x = input - 1
-      term1 = 2 × √(e¹/π)
-      term2 = ((x + 10.900511 + 0.5) / e¹)^(x + 0.5) 
-      sum = d[1]
-      for k in 2:11
-          sum = sum + d[k] / (x + k - 1)
-      return term1 × term2 × sum">
-</span></p>
-<p>Let’s see if I typed in that function correctly:</p>
-<div class="indented">
-   <p><span class="hurmet-calc" data-entry="Γ(4.5) = ?"></span></p>
-</div>
-<div class="indented">
-   <p><span class="hurmet-calc" data-entry="lanczos(4.5, d) = %"></span>, That checks. <span class="hurmet-calc" data-entry="✓"></span></p>
-</div>
-<p>Reference:</p>
-<p>[1]: Glendon Pugh: An Analysis of the Lanczos Gamma Approximation<br>       http://bh0.physics.ubc.ca/People/matt/Doc/ThesesOthers/Phd/pugh.pdf</p>
 
 </div> <!-- editor -->
 
