Revert to matrices w/o leading backslash.

--- a/site/examples.html
+++ b/site/examples.html
@@ -168,9 +168,9 @@
 <h3><strong>Matrix Inversion</strong></h3>
 
 <p>Hurmet can solve a system of linear equations via matrix inversion.</p>
-<p>The system:   <span class="hurmet-calc" data-entry="{:3x + 2y + z = 39;2x + 3y + z = 34;x + 2y + 3z = 26}"></span>   when restated in matrix format is:   <span class="hurmet-calc" data-entry="\(3, 2, 1; 2, 3, 1; 1, 2, 3) \[x; y; z] = \[39; 34; 26]"></span></p>
+<p>The system:   <span class="hurmet-calc" data-entry="{:3x + 2y + z = 39;2x + 3y + z = 34;x + 2y + 3z = 26}"></span>   when restated in matrix format is:   <span class="hurmet-calc" data-entry="(3, 2, 1; 2, 3, 1; 1, 2, 3) [x; y; z] = [39; 34; 26]"></span></p>
 <p>So we can invert the first matrix and multiply it times both sides. That solves for each variable.</p>
-<p><span class="hurmet-calc" data-entry="\[x; y; z] = \(3, 2, 1; 2, 3, 1; 1, 2, 3)⁻¹ \[39; 34; 26] = ?"></span></p>
+<p><span class="hurmet-calc" data-entry="[x; y; z] = (3, 2, 1; 2, 3, 1; 1, 2, 3)⁻¹ [39; 34; 26] = ?"></span></p>
 
 <p></p>
 
@@ -192,7 +192,7 @@
     return item = array[iLow]"></span>
 <p></p>
 <p>After the function is defined, you can call it like any other function.</p>
-<p><span class="hurmet-calc" data-entry="b = isIn(5, \[1, 3, 5, 8, 9]) = ?"></span></p>
+<p><span class="hurmet-calc" data-entry="b = isIn(5, [1, 3, 5, 8, 9]) = ?"></span></p>
 </div> <!-- editor -->
 
 </td></tr></tbody>
