--- a/site/index.html
+++ b/site/index.html
@@ -58,19 +58,24 @@
 <div id=editor style="margin-bottom: 23px"></div>
 <div style="display: none" id="content">
 
-<p>This is editable text. You can focus it and start typing. A calculation cell will open if you click on it. All calculations will update if you press <strong>Enter</strong> to close a calculation cell.</p>
-
-<p>This week’s example:</p>
-
-<h3>Parallel Axis Theorem</h3><p>Say that an existing steel W12x65 beam must be made stronger. We can weld cover plates to the top and bottom of the beam. To calculate the increase in the beam’s moment of inertia, we use the parallel axis theorem:</p><div class="indented"><p><span class="hurmet-calc" data-entry="ΔI = A d²"></span>, where <img src="data:image/svg+xml;utf8, %3Csvg width='1965.255' height='1495.963' viewBox='-1.005 -14.505 20.471 15.583' style='fill:none;stroke-linecap:round;stroke-linejoin:round' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M0 12h12' style='stroke:%23000;stroke-width:.06;stroke-miterlimit:4;stroke-dasharray:none' transform='matrix(1 0 0 -1 .005 .303)'/%3E%3Cpath d='M0 .6h5.8M6.2.6H12' style='stroke:%23000;stroke-width:.05;stroke-miterlimit:4;stroke-dasharray:none' transform='matrix(1 0 0 -1 .005 .303)'/%3E%3Cpath d='M12 12v-.6' style='stroke:%23000;stroke-width:.06;stroke-miterlimit:4;stroke-dasharray:none' transform='matrix(1 0 0 -1 .005 .303)'/%3E%3Cpath d='M12 .6V0M12 0H0' style='stroke:%23000;stroke-width:.05;stroke-miterlimit:4;stroke-dasharray:none' transform='matrix(1 0 0 -1 .005 .303)'/%3E%3Cpath d='M12 11.4H6.2M5.8 11.4H0M0 11.4v.6' style='stroke:%23000;stroke-width:.06;stroke-miterlimit:4;stroke-dasharray:none' transform='matrix(1 0 0 -1 .005 .303)'/%3E%3Cpath d='M0 0v.6' style='stroke:%23000;stroke-width:.05;stroke-miterlimit:4;stroke-dasharray:none' transform='matrix(1 0 0 -1 .005 .303)'/%3E%3Cpath d='M6.2 11.4V.6M5.8 11.4V.6' style='stroke:%23000;stroke-width:.06;stroke-miterlimit:4;stroke-dasharray:none' transform='matrix(1 0 0 -1 .005 .303)'/%3E%3Cpath d='M1 0h9.75M1 12.75h9.75M10.75 0v-.75M10.75 12.75V12M10.75-.75H1M10.75 12H1M1-.75V0M1 12v.75' style='stroke:%23000;stroke-width:.05;stroke-miterlimit:4;stroke-dasharray:none' transform='matrix(1 0 0 -1 .005 .303)'/%3E%3Cpath d='M-1 6H.531m.313 0h.312m.313 0H3.03m.313 0h.312m.313 0H5.53m.313 0h.312m.313 0H8.03m.313 0h.312m.313 0h1.562m.313 0h.312m.313 0H13' style='stroke:%23000;stroke-width:.02;stroke-miterlimit:4;stroke-dasharray:none' transform='matrix(1 0 0 -1 .005 .303)'/%3E%3Cpath d='m13 12.375.104-.625h-.208ZM13 6l-.104.625h.208z' style='fill:%23000;fill-rule:evenodd;stroke:%23000;stroke-width:.0098' transform='matrix(1 0 0 -1 .005 .303)'/%3E%3Cpath d='M13 12.375V6m-2.094 6.375h2.406' style='stroke:%23000;stroke-width:.02;stroke-miterlimit:4;stroke-dasharray:none' transform='matrix(1 0 0 -1 .005 .303)'/%3E%3Cpath d='m10.75 12.75.368.515.147-.147z' style='fill:%23000;fill-rule:evenodd;stroke:%23000;stroke-width:.0098' transform='matrix(1 0 0 -1 .005 .303)'/%3E%3Cpath d='m10.749 12.749 1.31 1.752h1.874' style='stroke:%23000;stroke-width:.0173255;stroke-miterlimit:4;stroke-dasharray:none' transform='matrix(1 0 0 -1 .005 .303)'/%3E%3Ctext xml:space='preserve' style='font-style:normal;font-weight:400;font-size:.666667px;line-height:1.25;font-family:sans-serif;fill:%23000;fill-opacity:1;stroke:none;stroke-width:.0104167' x='13.314' y='-9.596' transform='translate(.005 .303)'%3E%3Ctspan style='font-size:.666667px;stroke-width:.0104167' x='13.314' y='-9.596'%3Ed%3C/tspan%3E%3C/text%3E%3Ctext xml:space='preserve' style='font-style:normal;font-weight:400;font-size:.666667px;line-height:1.25;font-family:sans-serif;fill:%23000;fill-opacity:1;stroke:none;stroke-width:.0104167' x='14.128' y='-14.301' transform='translate(.005 .303)'%3E%3Ctspan style='font-size:.666667px;stroke-width:.0104167' x='14.128' y='-14.301'%3E3/4&amp;quot; x 11&amp;quot; plate%3C/tspan%3E%3C/text%3E%3Ctext xml:space='preserve' style='font-style:normal;font-weight:400;font-size:.777778px;line-height:1.25;font-family:sans-serif;fill:%23000;fill-opacity:1;stroke:none;stroke-width:.0104167' x='1.182' y='-10.588' transform='translate(.005 .303)'%3E%3Ctspan style='font-size:.777778px;stroke-width:.0104167' x='1.182' y='-10.588'%3EW12x65%3C/tspan%3E%3C/text%3E%3C/svg%3E" alt="Cover Plate" width="350" class="right">  </p><div class="indented"><p><span class="hurmet-calc" data-entry="ΔI"></span> is the change in moment of inertia <br><span class="hurmet-calc" data-entry="A"></span> is the area of the new material <br><span class="hurmet-calc" data-entry="d"></span> is the distance from the beam’s neutral axis to the centroid. of the new material.</p></div></div><p>Here’s how I arrange that calculation. The final column’s formula is <span class="hurmet-calc" data-entry="I = I_self + A d^2"></span></p><p><span class="hurmet-calc" data-entry="format = &quot;r4&quot;"></span></p><p><span class="hurmet-calc" data-entry="compositeBeam = ``
-Section      | A    | I_self | d  | I
-             | in²  | in⁴    | in | in⁴
-W12x65       | 19.1 | 533    |  0 | = I_self + A × d²
-top plate    | 8.25 |  0.387 | 6.375 |
-bottom plate | 8.25 |  0.387 | 6.375 |
-Sum          |      |        |    | =sum()
-``"></span></p><p><span class="hurmet-calc" data-entry="compositeBeam.Sum.I = ? in⁴"></span>, the new moment of inertia</p>
-
+  <h3>Breaking Changes</h3>
+  <ol>
+     <li>
+        <p>Matrices and vectors no longer require a leading <code>\</code> character. This reverts to the syntax from eight months ago.</p>
+     </li>
+     <li>
+        <p>In user-defined functions, code blocks must now finish with an <code>end</code> statement. Indentation is no longer significant.</p>
+     </li>
+  </ol>
+  <p>This is editable text. You can focus it and start typing. All calculations will update if you press <strong>Enter</strong> to close a calculation cell.</p>
+  <p>This week’s example:</p>
+  <h3>Simple span beam</h3>
+  <p><span class="hurmet-calc" data-entry="L = '12 feet'"></span>, length</p>
+  <p><span class="hurmet-calc" data-entry="w = '110 lbf/ft'"></span>, uniform line load</p>
+  <p><span class="hurmet-calc" data-entry="P = '1000 lbf'"></span>, mid-span point load</p>
+  <p><span class="hurmet-calc" data-entry="V = (w L)/2 + P/2 = ?? lbf"></span>, maximum shear</p>
+  <p><span class="hurmet-calc" data-entry="M = (w L^2)/8 + (P L)/4 = ?? lbf-ft"></span>, max bending moment</p>
+  
 </div> <!-- editor -->
 
 </td></tr></tbody>
