--- a/preview/index.html
+++ b/preview/index.html
@@ -31,7 +31,7 @@
      <li><a href="https://github.com/ronkok/Hurmet" target="_blank">GitHub</a></li>
      <li><a href="../site/docs/en/manual.html#tutorial" target="_blank">Tutorial</a></li>
      <li><a href="../site/docs/en/manual.html" target="_blank">Documentation</a></li>
-     <li><a href="./examples.html" target="_blank">Examples</a></li>
+     <li><a href="../site/examples.html" target="_blank">Examples</a></li>
    </ul>
 </nav>
 
