Fix an instruction

--- a/site/examples.html
+++ b/site/examples.html
@@ -72,7 +72,7 @@
 </header>
 
 <p>This page contains examples of Hurmet features. You can edit them. Calculations will
-update if you close a calculation cell with <strong>Shift-Enter</strong>.</p>
+update if you close a calculation cell with <strong>Enter</strong>.</p>
 
 <h2>Print Header</h2>
 <p>At the top of this document is a print header. You can create a print header in any
