--- a/preview/index.html
+++ b/preview/index.html
@@ -61,9 +61,9 @@
    <p>This is editable text. You can focus it and start typing. All calculations will update if you press <strong>Enter</strong> to close a calculation cell.</p>
    <p>This week’s example:</p>
    <h3>Simple span beam</h3>
-   <p><span class="hurmet-calc" data-entry="L = '12 feet'"></span>, length</p>
-   <p><span class="hurmet-calc" data-entry="w = '110 lbf/ft'"></span>, uniform line load</p>
-   <p><span class="hurmet-calc" data-entry="P = '1000 lbf'"></span>, mid-span point load</p>
+   <p><span class="hurmet-calc" data-entry="L = 12 'feet'"></span>, length</p>
+   <p><span class="hurmet-calc" data-entry="w = 110 'lbf/ft'"></span>, uniform line load</p>
+   <p><span class="hurmet-calc" data-entry="P = 1000 'lbf'"></span>, mid-span point load</p>
    <p><span class="hurmet-calc" data-entry="V = (w L)/2 + P/2 = ?? lbf"></span>, maximum shear</p>
    <p><span class="hurmet-calc" data-entry="M = (w L^2)/8 + (P L)/4 = ?? lbf-ft"></span>, max bending moment</p>
 
