Fix: Remove erroneous comma.

--- a/site/examples.html
+++ b/site/examples.html
@@ -169,7 +169,7 @@ Say that we want to build a cylindrical water tank in 5-foot courses.
 <p><span class="hurmet-calc" data-entry="F_u = M/(0.95 d_c) = ?? kips"></span>, panel zone shear demand</p>
 <p><span class="hurmet-calc" data-entry="P_r = '142 kips'"></span>, axial load demand in column from structural analysis</p>
 <p><span class="hurmet-calc" data-entry="P_c = 0.6 F_y A_c = ?? kips"></span></p>
-<p><span class="hurmet-calc" data-entry="ϕR_n = {0.9 × 0.6 F_y d_c t_cw if P_r ≤ 0.4 P_c; 0.9 × 0.6 F_y d_c t_cw (1.4 - P_r//P_c) otherwise} = %% kips"></span> <span class="hurmet-calc" data-entry='{">  Fᵤ , ok", if ϕR_n > F_u; \red("<  Fᵤ, ng, doubler plates required") otherwise} = @'></span> </p>
+<p><span class="hurmet-calc" data-entry="ϕR_n = {0.9 × 0.6 F_y d_c t_cw if P_r ≤ 0.4 P_c; 0.9 × 0.6 F_y d_c t_cw (1.4 - P_r//P_c) otherwise} = %% kips"></span> <span class="hurmet-calc" data-entry='{">  Fᵤ , ok" if ϕR_n > F_u; \red("<  Fᵤ, ng, doubler plates required") otherwise} = @'></span> </p>
 <p></p>
 
 <h2>Rational Numbers</h2>
