Add range operator to breaking change notice.

--- a/site/index.html
+++ b/site/index.html
@@ -68,6 +68,9 @@
         <p>The dictionary data type has been removed from Hurmet. A single-row data frame contains the same information as a dictionary, so dictionaries were superfluous. </p>
     </li>
     <li>
+      <p>The range operator is now <code>..</code> instead of <code>:</code>.</p>
+    </li>
+    <li>
         <p>Hurmet data frames briefly had a quasi-spreadsheet functionality. It was clumsy and I’ve removed it.</p>
     </li>
   </ol>
