Fix invalid div

--- a/site/index.html
+++ b/site/index.html
@@ -35,8 +35,7 @@
 
 <div id="slogan"><h4>Calculate and communicate</h4></div>
 
-<div class="prosemirror">
-<table class="nogrid editor-wrap" id="wrap-table">
+<table class="nogrid editor-wrap prosemirror" id="wrap-table">
 <thead><tr>
    <th></th>
    <th></th>
@@ -45,7 +44,6 @@
 <tr><th></th><th></th><th></th></tr>
 </thead>
 <tbody><tr><td colspan="3">
-</div>
 
 <div id=editor style="margin-bottom: 23px"></div>
 <div style="display: none" id="content">
