--- a/preview/index.html
+++ b/preview/index.html
@@ -35,18 +35,16 @@
 
 <div id="slogan"><h4>Getting calculations right</h4></div>
 
-<div class="prosemirror">
-<table class="nogrid editor-wrap" id="wrap-table">
-<thead><tr>
-   <th></th>
-   <th></th>
-   <th></th>
-</tr>
-<tr><th></th><th></th><th></th></tr>
-</thead>
-<tbody><tr><td colspan="3">
-</div>
-
+<table class="nogrid editor-wrap prosemirror" id="wrap-table">
+  <thead><tr>
+     <th></th>
+     <th></th>
+     <th></th>
+  </tr>
+  <tr><th></th><th></th><th></th></tr>
+  </thead>
+  <tbody><tr><td colspan="3">
+  
 <div id=editor style="margin-bottom: 23px"></div>
 <div style="display: none" id="content">
 
