Support print page numbers, part 1.

--- a/preview/index.html
+++ b/preview/index.html
@@ -34,16 +34,6 @@
 <article>
 
 <div id="slogan"><h4>Getting calculations right</h4></div>
-
-<table class="nogrid editor-wrap prosemirror" id="wrap-table">
-  <thead><tr>
-     <th></th>
-     <th></th>
-     <th></th>
-  </tr>
-  <tr><th></th><th></th><th></th></tr>
-  </thead>
-  <tbody><tr><td colspan="3">
   
 <div id=editor style="margin-bottom: 23px"></div>
 <div style="display: none" id="content">
@@ -59,8 +49,7 @@
 
 </div> <!-- editor -->
 
-</td></tr></tbody>
-</table>
+<table class="nogrid prosemirror" id="print-table"><tbody></tbody></table>
 </article>
 
 <div id="copyright">Copyright © 2020-2021 Ron Kok. Released under the <a href="https://opensource.org/licenses/MIT">MIT License</a></div>
