Support print page numbers, part 2

--- a/preview/index.html
+++ b/preview/index.html
@@ -49,7 +49,7 @@
 
 </div> <!-- editor -->
 
-<table class="nogrid prosemirror" id="print-table"><tbody></tbody></table>
+<div class="ProseMirror" id="print-div"></div>
 </article>
 
 <div id="copyright">Copyright © 2020-2021 Ron Kok. Released under the <a href="https://opensource.org/licenses/MIT">MIT License</a></div>
