Enable font-size selection

--- a/preview/index.html
+++ b/preview/index.html
@@ -35,7 +35,7 @@
 
 <div id="slogan"><h4>Getting calculations right</h4></div>
   
-<div id=editor style="margin-bottom: 23px"></div>
+<div id=editor class="pica" style="margin-bottom: 23px"></div>
 <div style="display: none" id="content">
 
    <p>This is editable text. You can focus it and start typing. All calculations will update if you press <strong>Enter</strong> to close a calculation cell.</p>
@@ -49,7 +49,7 @@
 
 </div> <!-- editor -->
 
-<div class="ProseMirror" id="print-div"></div>
+<div id="print-div" class="ProseMirror pica"></div>
 </article>
 
 <div id="copyright">Copyright © 2020-2021 Ron Kok. Released under the <a href="https://opensource.org/licenses/MIT">MIT License</a></div>
