--- a/site/blank.html
+++ b/site/blank.html
@@ -34,18 +34,8 @@
 <article>
 
 <div id="slogan"><h4>Calculate and communicate</h4></div>
-
-<table class="nogrid editor-wrap prosemirror" id="wrap-table">
-  <thead><tr>
-     <th></th>
-     <th></th>
-     <th></th>
-  </tr>
-  <tr><th></th><th></th><th></th></tr>
-  </thead>
-  <tbody><tr><td colspan="3">
   
-<div id=editor style="margin-bottom: 23px"></div>
+<div id=editor class="pica" style="margin-bottom: 23px"></div>
 <div style="display: none" id="content">
 <p></p>
 <p></p>
@@ -53,8 +43,7 @@
 <p></p>
 </div> <!-- editor -->
 
-</td></tr></tbody>
-</table>
+<div id="print-div" class="ProseMirror pica"></div>
 </article>
 
 <div id="copyright">Copyright © 2020-2022 Ron Kok. Released under the <a href="https://opensource.org/licenses/MIT">MIT License</a></div>
