--- a/site/examples.html
+++ b/site/examples.html
@@ -24,7 +24,6 @@
    <ul>
      <li><a href="https://github.com/ronkok/Hurmet" target="_blank">GitHub</a></li>
      <li><a href="./docs/en/manual.html" target="_blank">Documentation</a></li>
-     <li>Examples</li>
    </ul>
 </nav>
 
@@ -32,31 +31,19 @@
  
 <article>
 
-<div id="slogan"><h4>Getting calculations right</h4></div>
-
-<table class="nogrid editor-wrap prosemirror" id="wrap-table">
-  <thead><tr>
-     <th></th>
-     <th></th>
-     <th></th>
-  </tr>
-  <tr><th></th><th></th><th></th></tr>
-  </thead>
-  <tbody><tr><td colspan="3">
-  
-<div id=editor style="margin-bottom: 23px"></div>
+<div id="slogan"><h4>Calculate and communicate</h4></div>
+ 
+<div id=editor class="pica" style="margin-bottom: 23px"></div>
 <div style="display: none" id="content">
 
 <header>
-<table class="one-rule c2c"><tbody><tr>
-  <th data-colwidth="301">
-    <p><strong>Company Name</strong> Calculations</p>
-    <p>Client: <strong>Client Name</strong></p>
+<table class="one-rule c2c c3r"><tbody><tr>
+  <th data-colwidth="320">
+    <p><strong>Client | Project Name</strong><br>Calculations</p>
   </th>
-  <th data-colwidth="92"><p></p></th>
+  <th data-colwidth="180"><p></p></th>
   <th>
-    <p>Job: Job Number <strong>Job Title</strong></p>
-    <p><strong>Job Description</strong></p>
+    <p>$PAGE</p>
   </th>
 </tr></tbody></table>
 </header>
@@ -70,6 +57,7 @@ document by clicking the <img src="./images/header.svg" alt="Header" width="20" 
 button. Later, when you click the <img src="./images/printer.svg" alt="Printer" width="20" class="20">
 button, the header will be printed at the top of every page. Always keep three columns
 in a print header. Otherwise, edit it any way you want.</p>
+<p>If you write <code>$PAGE</code> into a print header, Hurmet will display page numbers at that location.</p>
 <p></p>
 
 <h2>Rounding Results</h2>
@@ -206,8 +194,7 @@ end"></span>
 <p><span class="hurmet-calc" data-entry="b = isIn(5, [1, 3, 5, 8, 9]) = ?"></span></p>
 </div> <!-- editor -->
 
-</td></tr></tbody>
-</table>
+<div id="print-div" class="ProseMirror pica"></div>
 </article>
 
 <div id="copyright">Copyright © 2020-2021 Ron Kok. Released under the <a href="https://opensource.org/licenses/MIT">MIT License</a></div>
