--- a/site/index.html
+++ b/site/index.html
@@ -35,17 +35,7 @@
 
 <div id="slogan"><h4>Calculate and communicate</h4></div>
 
-<table class="nogrid editor-wrap prosemirror" id="wrap-table">
-<thead><tr>
-   <th></th>
-   <th></th>
-   <th></th>
-</tr>
-<tr><th></th><th></th><th></th></tr>
-</thead>
-<tbody><tr><td colspan="3">
-
-<div id=editor style="margin-bottom: 23px"></div>
+<div id=editor class="pica" style="margin-bottom: 23px"></div>
 <div style="display: none" id="content">
 
   <p>This is editable text. You can focus it and start typing. All calculations will update if you press <strong>Enter</strong> to close a calculation cell.</p>
@@ -59,8 +49,7 @@
   
 </div> <!-- editor -->
 
-</td></tr></tbody>
-</table>
+<div id="print-div" class="ProseMirror pica"></div>
 </article>
 
 <div id="copyright">Copyright © 2020-2022 Ron Kok. Released under the <a href="https://opensource.org/licenses/MIT">MIT License</a></div>
