Support print page numbers part 5

--- a/site/examples.html
+++ b/site/examples.html
@@ -55,8 +55,8 @@ update if you close a calculation cell with <strong>Enter</strong>.</p>
 <p>At the top of this document is a print header. You can create a print header in any
 document by clicking the <img src="./images/header.svg" alt="Header" width="20" class="20">
 button. Later, when you click the <img src="./images/printer.svg" alt="Printer" width="20" class="20">
-button, the header will be printed at the top of every page. Always keep three columns
-in a print header. Otherwise, edit it any way you want.</p>
+button, the header will be printed at the top of every page. The header is a table and it should
+remain a table. Otherwise, edit it any way you want.</p>
 <p>If you write <code>$PAGE</code> into a print header, Hurmet will display page numbers at that location.</p>
 <p></p>
 
