Remove chart.js

--- a/preview/index.html
+++ b/preview/index.html
@@ -13,7 +13,7 @@
 <link rel="stylesheet" media="print" href="../site/print.css">
 
 <script src="../site/katex/katex.min.js"></script>
-<script src="../site/chart.min.js"></script>
+<!--<script src="chart.min.js" async></script>-->
 <script src="hurmet.js"></script>
 </head>
 
