--- a/site/index.html
+++ b/site/index.html
@@ -13,7 +13,7 @@
 <link rel="stylesheet" media="print" href="print.css">
 
 <script src="katex/katex.min.js"></script>
-<script src="chart.min.js" async></script>
+<!--<script src="chart.min.js" async></script>-->
 <script src="hurmet.min.js"></script>
 </head>
 
