--- a/preview/index.html
+++ b/preview/index.html
@@ -6,11 +6,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Hurmet.app</title>
 
-<link rel="stylesheet" href="../site/styles.css">
 <link rel="stylesheet" href="../site/katex/katex.min.css">
-<link rel="stylesheet" href="../site/editor.css">
-<link rel="stylesheet" href="../site/tables.css">
-<link rel="stylesheet" media="print" href="../site/print.css">
+<link rel="stylesheet" href="../site/styles.min.css">
 
 <script src="../site/katex/katex.min.js"></script>
 <!--<script src="chart.min.js" async></script>-->
