--- a/site/blank.html
+++ b/site/blank.html
@@ -6,11 +6,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Hurmet.app</title>
 
-<link rel="stylesheet" href="styles.css">
 <link rel="stylesheet" href="katex/katex.min.css">
-<link rel="stylesheet" href="editor.css">
-<link rel="stylesheet" href="tables.css">
-<link rel="stylesheet" media="print" href="print.css">
+<link rel="stylesheet" href="styles.min.css">
 
 <script src="katex/katex.min.js"></script>
 <!--<script src="chart.min.js" async></script>-->
